[package]
name = "weeb_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anitomy = "0.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.27.1"
clap = { version = "4.1.8", features = ["derive"] }
daemonize = "0.5.0"
simple_logger = { version = "4.1.0", features = ["timestamps"] }
regex = "1"

